--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.10"
