--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --output-public-path=/dist/  --mode development --progress --open --hot",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress"
+    "build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,13 +19,16 @@
     "url": "https://github.com/AliaksandrKazerski/FCMP-BY-Q4-2019.1/issues"
   },
   "homepage": "https://github.com/AliaksandrKazerski/FCMP-BY-Q4-2019.1#readme",
-  "dependencies": {},
+  "dependencies": {
+    "clean-webpack-plugin": "^3.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
